# calificame-backend

./: .coverage  .dockerignore  .env.development  .env.example  .env.production  .env.test  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
app/: config.py  database.py  logging_config.py  main.py  rate_limit.py
app/agents/: answer_extraction_agent.py  base.py  enrollment_extraction_agent.py  grading_agent.py
app/api/: analytics.py  answer_keys.py  auth.py  classes.py  deps.py  grading.py  images.py  institutions.py  pdf_generator.py  projects.py  questions.py  student_exams.py  tasks.py
app/models/: __init__.py  answer_key.py  clase.py  exam_answer.py  institution.py  project.py  question.py  student_exam.py  task_log.py  user.py
app/schemas/: __init__.py  analytics.py  answer_key.py  clase.py  grading.py  institution.py  project.py  question.py  student_exam.py  task_log.py  user.py
tests/: conftest.py  test_ai_image_preprocessor.py  test_analytics_endpoints.py  test_answer_keys.py  test_auth.py  test_cascade_integrity.py  test_class_professor_project_perms.py  test_class_projects.py  test_classes.py  test_cross_user_authorization.py  test_enrollment.py  test_enrollments.py  test_generate_and_assign.py  test_gradebook.py  test_grading.py  test_images_auth.py  test_institutions.py  test_pdf_generator.py  test_projects.py  test_rate_limits.py  test_roles.py  test_security.py  test_security_hardening.py  test_student_exams.py  test_tasks.py
(+13 files in other folders)
